deploy/k8s/nn-generator.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nn-generator
  namespace: lighthouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nn-generator
  template:
    metadata:
      labels:
        app: nn-generator
    spec:
      containers:
        - name: nn-generator
          image: ghcr.io/light-house-ai/nn-generator:latest
          resources:
            limits:
              memory: "300Mi"
              cpu: "200m"
