deploy/k8s/client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lighthouse
  name: lighthouse-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lighthouse-client
  template:
    metadata:
      labels:
        app: lighthouse-client
    spec:
      containers:
        - name: app
          image: ghcr.io/light-house-ai/lighthouse-client:latest
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - containerPort: 8000
              name: api-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: lighthouse
  name: lighthouse-client-service
spec:
  selector:
    app: lighthouse-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: api-port
      name: api-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lighthouse-client
  namespace: lighthouse
  labels:
    name: lighthouse-client
spec:
  rules:
    - host: lighthouse.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lighthouse-app-service
                port:
                  name: api-port

---
